Hide scrollbar. Fix issue of message persistence after the first sent order. Add box-shadowing and transitions.

--- a/styles/index.css
+++ b/styles/index.css
@@ -75,6 +75,7 @@ img {
   background-color: #CF2B2B;
   color: white;
   z-index: 3;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .header h1 {
@@ -95,10 +96,17 @@ img {
 .product-row {
   display: flex;
   align-items: center;
-  overflow-x: scroll;
+  overflow: auto;
   padding-left: 15px;
   font-size: 16px;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
 }
+
+.product-row:-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+}
+
 
 .product-row .strong {
   margin-top: 8px;
@@ -118,6 +126,7 @@ img {
   border-radius: 9px;
   width: 172px;
   position: relative;
+  box-shadow: 0 0 10px -4px rgba(0, 0, 0, 0.25);
 }
 
 .vertical-space {
@@ -150,10 +159,12 @@ img {
   color: white;
   font-size: 22px;
   border-radius: 9px;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 }
 
 .confirmation-page {
-  display: none;
+  display: flex;
+  opacity: 0;
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.9);
@@ -162,7 +173,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: -1;
 }
 
 .c-header {
@@ -202,7 +213,9 @@ img {
 }
 
 .show {
-  display: flex;
+  transition: opacity 0.5s ease-out;
+  opacity: 1;
+  z-index: 10;
 }
 
 
